<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="387dp"
        android:layout_height="239dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/clientName_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/name_hint"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name_hint" />

        <EditText
            android:id="@+id/clientLastName_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/last_name_hint"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/last_name_hint" />

        <EditText
            android:id="@+id/clientAge_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/age_hint"
            android:ems="10"
            android:inputType="number"
            android:text="@string/age_hint" />

        <EditText
            android:id="@+id/clientDate_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/date_hint"
            android:ems="10"
            android:inputType="date"
            android:text="@string/date_hint" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_button" />
    </LinearLayout>

    <Button
        android:id="@+id/signOut_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sing_out_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.652" />
</androidx.constraintlayout.widget.ConstraintLayout>